@@ -157,7 +157,7 @@ span.doc_desc	{color:#ccc; display:block; font-size:12px; line-height:14px; padd
 span.doc_format	{background-color:rgba(22,24,37,0.6); border-radius:4px; color:#aaa; font-size:10px; font-weight:bold; margin-left:10px; padding:2px 5px;}
 span.doc_lang,
 span.doc_country{color:#CCC; display:inline-block; font-size:13px; line-height:1.5em; margin:5px 3px 0 0; text-transform:uppercase; vertical-align:top;}
-span.doc_country{font-style:italic; text-transform:initial;}
+span.doc_country{font-style:italic; text-transform:initial; line-height:1em; vertical-align:bottom;}
 span.rep_type	{color:#CCC; display:inline-block; font-size:12px; margin-left:5px; vertical-align:middle;}
 span.doc_cat,
 span.doc_rec,
