@@ -1,3 +1,10 @@
+Development Portal (2020-06-05 shi)
+==============================
+Updated recepient-country layout for document-links
+Display all links in new tab for new SAVi
+Update vocab geonames link for location-id
+
+
 Development Portal (2020-06-01 shi)
 ==============================
 Display V1 banner for new SAVi
